  Backport fixes rev 1.90-1.91

Enhance the behavior of mod_isapi's WriteClient() callback to
  provide better emulation for isapi modules that presume that the
  first WriteClient() call may send status and headers.  An example
  of WriteClient() abuse is the foxisapi module, which relies on
  that assumpion and now works.  Regressions on various example isapi
  modules don't reveal any new issues.  [May fix PR16637]

Submitted by: William Rowe
Reviewed by: Milan Kosina


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/APACHE_2_0_BRANCH@98801 13f79535-47bb-0310-9956-ffa450edef68